--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-redux": "^9.2.0"
