--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=5000
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=842680
 DB_NAME=geo_attendance
+DB_USER=sa
+DB_PASSWORD=11111111
+DB_INSTANCE=SQLEXPRESS
