--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,2 @@
 PORT=5000
-DB_HOST=localhost
-DB_NAME=geo_attendance
-DB_USER=sa
-DB_PASSWORD=11111111
-DB_INSTANCE=SQLEXPRESS
+MONGO_URI="mongodb+srv://Atreya-Chandan:Atreya786@my-db.0l8w9lc.mongodb.net/Geo-Attendance-Tracker?retryWrites=true&w=majority"
