Signup changed to Add New User and can be only accessed by admin

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI="mongodb+srv://Atreya-Chandan:Atreya786@my-db.0l8w9lc.mongodb.net/Geo-Attendance-Tracker?retryWrites=true&w=majority"
+JWT_SECRET=123456
