--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "expo": "~54.0.32",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
     "latest-version": "^9.0.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
