--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/drawer": "^7.8.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.4",
+    "babel-preset-expo": "~54.0.10",
     "expo": "~54.0.32",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
@@ -24,8 +27,10 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0"
   },
   "private": true
