--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.22.0",
     "bcrypt": "^6.0.0",
+    "canvas": "^3.2.1",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "nodemon": "^3.1.11"
