--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.4",
     "babel-preset-expo": "~54.0.10",
     "expo": "~54.0.32",
+    "expo-camera": "~17.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
