--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.22.0",
+    "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
     "canvas": "^3.2.1",
     "cloudinary": "^2.9.0",
@@ -20,8 +21,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "face-api.js": "^0.22.2",
+    "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
