Backend deployment after python deployment

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=5000
 MONGO_URI="mongodb+srv://Atreya-Chandan:Atreya786@my-db.0l8w9lc.mongodb.net/Geo-Attendance-Tracker?retryWrites=true&w=majority"
 JWT_SECRET=123456
+PYTHON_SERVICE_URL="https://face-verification-38jw.onrender.com"
