--- a/client/package.json
+++ b/client/package.json
@@ -28,10 +28,10 @@
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0"
   },
